# Mora-dl

./: .gitignore  README.md  pyproject.toml  queue_endpoint_amazon-POST.md  requirements.txt  search_endpoint_amazon-POST.md  setup.py  track_endpoint_amazon-POST.md
mora/: __init__.py  api.py  audio.py  backup.py  cli.py  config.py  crypto.py  downloader.py  metadata.py  models.py  playlist.py  telegram_cloud.py
