[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mora-scraper"
version = "0.1.0"
description = "Modern scraper to download FLAC music from the hifi API"
authors = [{name = "jesufh", email = "jf.hh3002@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mutagen>=1.46.0",
    "tqdm>=4.65.0",
    "imageio-ffmpeg>=0.6.0",
    "telethon>=1.33.0",
    "cryptography>=41.0.0"
]

[project.optional-dependencies]
telegram-fast = ["cryptg>=0.5.0"]

[project.scripts]
mora = "mora.cli:cli"
